<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"
        android:title="Home"
        android:icon="@drawable/ic_icon_home_inactive" />
    <item android:id="@+id/eventFragment"
        android:title="Event"
        android:icon="@drawable/ic_icon_event_inactive" />
    <item android:id="@+id/storyFragment"
        android:title="Story"
        android:icon="@drawable/ic_icon_story_inactive" />
    <item android:id="@+id/profileFragment"
        android:title="Profile"
        android:icon="@drawable/ic_icon_profile_inactive" />
</menu>